# madml

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Performance.pyperf  README.md  compile_shaders.py  madml.sln  ml_on_vulkan.sln  ml_on_vulkan.sln.DotSettings  mod.py  module.py  python.pyperf  python.pyproj  python1.pyperf  requirements.txt  setup.py  test.py  test.pyproj
CMake/: CMake.cpp  CMake.h  CMakeLists.txt
Debug/: test.ilk
backend/: CMakeLists.txt  ClassDiagram.cd  activation.cpp  activation.h  backend.cpp  backend.h  backend.vcxproj  backend.vcxproj.filters  buffer.cpp  buffer.h  common.h  context.cpp  context.h  convolution.cpp  convolution.h  gemm.cpp  gemm.h  halaml.cpp  halaml.h  layer.cpp  layer.h  loss.cpp  loss.h  math.cpp  math.h  matmul.cpp  matmul.h  nn_layers.cpp  nn_layers.h  normalization.cpp  normalization.h  pooling.cpp  pooling.h  rnn.cpp  rnn.h  spv_shader.cpp  spv_shader.h  tensor.cpp  tensor.h  test.h  (+4 more)
backend/shaders/backward_pass/: d_bias.comp  d_bias.comp.spv  d_gemm.comp  d_gemm.comp.spv  gradient.comp.spv
backend/shaders/backward_pass/activation/: d_celu.comp.spv  d_elu.comp.spv  d_relu.comp.spv  d_relu6.comp.spv  d_sigmoid.comp.spv
backend/shaders/backward_pass/binary_operators/: binary_operator.comp.spv
backend/shaders/backward_pass/normalization/: d_batch_normalization.comp
backend/shaders/backward_pass/unary_operators/: d_abs.comp.spv  d_exp.comp.spv  d_ln.comp  d_ln.comp.spv  d_sqrt.comp.spv  unary_operator.comp  unary_operator.comp.spv
backend/shaders/backward_pass/unary_operators/trig/: d_acos.comp.spv  d_acosh.comp.spv  d_asin.comp.spv  d_asinh.comp.spv  d_atan.comp.spv  d_atanh.comp.spv  d_cos.comp.spv  d_cosh.comp  d_tan.comp.spv  d_tanh.comp.spv
backend/shaders/forward_pass/: gemm.comp  gemm.comp.spv  gemm_1.comp  gemm_2.comp  gemm_3.comp
backend/shaders/forward_pass/activation/: celu.comp.spv  elu.comp.spv  gelu.comp  gelu.comp.spv  hardshrink.comp.spv  hardtanh.comp.spv  leakyrelu.comp.spv  logsigmoid.comp.spv  prelu.comp  prelu.comp.spv  relu.comp  relu.comp.spv  relu6.comp.spv  rrelu.comp  selu.comp.spv  sigmoid.comp.spv  softplus.comp  softplus.comp.spv  softshrink.comp.spv  softsign.comp.spv  tanhshrink.comp.spv
backend/shaders/forward_pass/binary_operators/: add.comp  add.comp.spv  div.comp  div.comp.spv  equal.comp.spv  greater_eq.comp.spv  greater_than.comp  greater_than.comp.spv  less_eq.comp  less_eq.comp.spv  less_than.comp.spv  max.comp.spv  min.comp  min.comp.spv  mod.comp.spv  mul.comp  mul.comp.spv  nequal.comp.spv  pow.comp.spv  sub.comp  sub.comp.spv  xor.comp.spv
backend/shaders/forward_pass/loss/: MSE.comp
backend/shaders/forward_pass/normalization/: batch_normalization.comp  instance_normalization.comp
backend/shaders/forward_pass/rnn/: gruCell.comp  gruCell.comp.spv  lstmCell.comp.spv  rnnCell.comp.spv
backend/shaders/forward_pass/transforms/: col2vol.comp  col2vol.comp.spv  transpose.comp.spv  vol2col.comp  vol2col.comp.spv
backend/shaders/forward_pass/unary_operators/: abs.comp.spv  ceil.comp.spv  clip.comp.spv  floor.comp.spv  ln.comp.spv  round.comp.spv  sqrt.comp.spv
backend/shaders/forward_pass/unary_operators/trig/: acos.comp.spv  acosh.comp  acosh.comp.spv  asin.comp.spv  asinh.comp.spv  atan.comp.spv  atanh.comp.spv  cos.comp.spv  cosh.comp.spv  sin.comp.spv  sinh.comp.spv  tan.comp.spv  tanh.comp.spv
backend/shaders/loss/: MSE.comp  MSE.comp.spv  d_MSE.comp.spv
cmake/: VulkanDependencies.cmake
cmake_madml/: CMakeLists.txt  cmake_madml.cpp  cmake_madml.h
engine/: CMakeLists.txt  buffer.h  common.h  context.cpp  engine.cpp  engine.h  engine.vcxproj  engine.vcxproj.filters  layer.cpp  layer.h  render.h  tensor.cpp  tensor.h  utils.cpp  utils.h
ext/: CMakeLists.txt
halalml/: halalml.cpp  halalml.vcxproj  halalml.vcxproj.filters  utils.cpp
halaml/: activation.cpp  activation.h  buffer.cpp  buffer.h  common.h  context.cpp  context.h  derivatives.cpp  derivatives.h  halaml.cpp  halaml.vcxproj  halaml.vcxproj.filters  halmal.h  layer.cpp  layer.h  madml.h  math.cpp  math.h  matmul.cpp  matmul.h  nn_layers.cpp  nn_layers.h  operators.cpp  operators.h  rnn.cpp  rnn.h  spv_shader.cpp  spv_shader.h  tensor.cpp  tensor.h  transform.cpp  transform.h  utils.cpp  utils.h
include/: activation.h  common.h  im2col.h  layer.h  madml.h  nn_layers.h  operators.h  spv_shader.h
kernel/: CMakeLists.txt  common.h  context.cpp  context.h  kernel.cpp  kernel.h  kernel.vcxproj  kernel.vcxproj.filters  layer.cpp  layer.h  tensor.cpp  tensor.h  utils.h
madml/: __init__.py  buffer.h  context.cpp  conv_test.py  convolution.cpp  convolution.h  data.py  init.py  layer.cpp  madml.h  madml.py  madml.pyproj  madml.vcxproj  madml.vcxproj.filters  manager.py  matmul.cpp  matmul.h  operators.cpp  optimizer.py  python_test.py  setup.py  spv_shader.cpp  spv_shader.h  tensor.cpp  tensor.h  tensor.py  tensor_ops.py  test.py  utils.h  worker.py
madml_cpp/: activation.cpp  activation.h  common.h  convolution.cpp  convolution.h  madml.h  madml_cpp.vcxproj  madml_cpp.vcxproj.filters  matmul.cpp  nn_layers.cpp  nn_layers.h  spv_shader.cpp  spv_shader.h  tensor.cpp  tensor.h  (+2 more)
vknn/: CMakeLists.txt  activation.cpp  activation.h  convolution.cpp  convolution.h  gemm.cpp  gemm.h  loss.cpp  loss.h  normalization.cpp  optimizer.cpp  optimizer.h  pooling.cpp  pooling.h  rnn.cpp  spv_shader.cpp  spv_shader.h  transform.cpp  transform.h  vknn.cpp  vknn.h  vknn.vcxproj  vknn.vcxproj.filters
vknn/shaders/backward_pass/: gradient.comp
vknn/shaders/backward_pass/activation/: d_relu.comp  d_sigmoid.comp
vknn/shaders/backward_pass/unary_operators/trig/: d_acos.comp
vknn/shaders/forward_pass/: gemm_1.comp
vknn/shaders/forward_pass/activation/: elu.comp  gelu.comp  hardsigmoid.comp  hardswish.comp  logsigmoid.comp  relu.comp
vknn/shaders/forward_pass/binary_operators/: max.comp  mod.comp  pow.comp
vknn/shaders/forward_pass/normalization/: batch_normalization.comp
vknn/shaders/forward_pass/unary_operators/: clip.comp
vknn/shaders/forward_pass/unary_operators/trig/: asinh.comp
(+364 files in other folders)
